# cpp-learning-journey

./: README.md
00_basics/hello_world/: make.sh  run.sh
01_build/hello_cpp_build/: CMakeLists.txt  README.md  format.sh  init.sh  make.sh  run.sh
01_build/hello_cpp_build/src/: main.cpp
